# obision-appinstall

./: .gitignore  Cargo.toml  README.md
builder/: Cargo.toml  meson.build
builder/build-aux/: cargo.sh
builder/data/: com.obision.appinstall.Builder.desktop  com.obision.appinstall.Builder.metainfo.xml  meson.build
builder/data/ui/: welcome.ui  window.ui
builder/src/: main.rs  project.rs
examples/: README.md
examples/c/: meson.build
examples/c/data/: com.obision.example.C.desktop  com.obision.example.C.metainfo.xml  demo.gresource.xml  meson.build
examples/c/data/ui/: window.ui
examples/c/src/: main.c
examples/cpp/: meson.build
examples/cpp/cpp/: metadata.toml
examples/cpp/cpp/install/: install.data
examples/cpp/data/: com.obision.example.Cpp.desktop  com.obision.example.Cpp.metainfo.xml  demo.gresource.xml
examples/cpp/data/ui/: window.ui
examples/cpp/src/: main.cpp
examples/javascript/: meson.build
examples/javascript/data/: com.obision.example.JavaScript.desktop  com.obision.example.JavaScript.metainfo.xml
examples/javascript/data/ui/: window.ui
examples/javascript/src/: main.js
examples/python/: meson.build
examples/python/data/: com.obision.example.Python.desktop  com.obision.example.Python.metainfo.xml  meson.build
examples/python/data/ui/: window.ui
examples/python/src/: main.py
examples/rust/: Cargo.toml  README.md  meson.build
examples/rust/build-aux/: cargo.sh
examples/rust/data/: com.obision.example.Rust.desktop  com.obision.example.Rust.metainfo.xml  meson.build
examples/rust/data/ui/: window.ui
examples/rust/src/: main.rs
installer/: Cargo.toml  meson.build
installer/data/: com.obision.appinstall.Installer.desktop  com.obision.appinstall.Installer.metainfo.xml  meson.build
installer/data/ui/: window.ui
installer/src/: main.rs
liblis/: Cargo.toml
liblis/src/: dependencies.rs  format.rs  lib.rs  metadata.rs
